# plex-rs

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  Justfile  README.md  plex.toml.example  rust-toolchain.toml
.cargo/: config.toml
plex-quotes/: Cargo.toml
plex-quotes/src/: lib.rs
src/: app.rs  boot_menu.rs  bootables.rs  config.rs  display.rs  error.rs  errors.rs  lib.rs  main.rs  overlay.rs  path.rs
src/config/: mod.rs
src/core/: app.rs  bootables.rs  display.rs  mod.rs  resolver.rs
src/helpers/: logger.rs  mod.rs  panic_handler.rs
src/iso/: iso_device_path.rs  iso_file.rs  iso_fs.rs  mod.rs
src/path/: mod.rs
src/ui/: boot_menu.rs  mod.rs  overlay.rs
src/ui/theme/: default.rs  mocha.rs  mod.rs  wii.rs
xtask/: Cargo.toml
xtask/src/: main.rs
